<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ProfilePageActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/container_pfp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="88dp"
        app:cardCornerRadius="60dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/pfpView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/pfp_desc"
            android:src="@drawable/default_pfp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/container_name_follow_counts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toEndOf="@id/container_pfp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nameDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:letterSpacing="-0.05"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="Julian" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:fontFamily="@font/inter"
            android:letterSpacing="-0.03"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="\@julianpagcaliwagan" />

        <LinearLayout
            android:id="@+id/container_follow_counts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/container_follower_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/follower_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:letterSpacing="-0.03"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:text="256" />

                <TextView
                    android:id="@+id/follower_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-4dp"
                    android:fontFamily="@font/inter_semibold"
                    android:letterSpacing="-0.03"
                    android:text="@string/followers_text"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_following_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/following_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:letterSpacing="-0.03"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:text="27" />

                <TextView
                    android:id="@+id/following_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-4dp"
                    android:fontFamily="@font/inter_semibold"
                    android:letterSpacing="-0.03"
                    android:text="@string/following_text"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/filter"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:contentDescription="@string/filter_mood_events"
        android:src="@drawable/filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_name_follow_counts" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/black"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:fontFamily="@font/inter_semibold"
        android:letterSpacing="-0.03"
        android:text="@string/edit_profile_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toStartOf="@+id/filter"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_pfp"
        app:strokeWidth="2dp" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/button_edit_profile"
        app:dividerColor="@color/black"
        app:dividerThickness="4dp" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/navbarContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_edit_profile">

        <ListView
            android:id="@+id/listview_profile_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="2dp"
            android:divider="@color/black"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <EditText
        android:id="@+id/editText_search"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:autofillHints="username"
        android:background="@drawable/edittext_round"
        android:fontFamily="@font/inter"
        android:hint="@string/search_mood_text"
        android:inputType="text"
        android:letterSpacing="-0.03"
        android:paddingHorizontal="20dp"
        android:textColorHint="@color/material_dynamic_neutral40"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/navbarContainer"
        layout="@layout/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

    <FrameLayout
        android:id="@+id/edit_form_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>