<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="8dp"
    android:outlineAmbientShadowColor="@color/black"
    android:outlineSpotShadowColor="#3F3F3F">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f1ffa1"
        android:outlineAmbientShadowColor="@color/material_dynamic_neutral80"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imgMap"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_location_on_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgHome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgHome"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_home_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fabAdd"
            app:layout_constraintStart_toEndOf="@id/imgMap"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="add post"
            android:src="@drawable/outline_add_box_24"
            app:borderWidth="1dp"
            app:elevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgNotification"
            app:layout_constraintStart_toEndOf="@id/imgHome"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/imgNotification"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_notifications_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgProfile"
            app:layout_constraintStart_toEndOf="@id/fabAdd"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_person_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgNotification"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>