...
    <string name="show_locati">Show location (by default)</string>
    <string name="show_trigge">Show triggers (by default)</string>
    <string name="show_graphi">Show graphic content</string>
    <string name="you_won_t_b">You won\'t be warned of potentially NSFW content on your feed.</string>
    <string name="step_4_of_4">Step 4 of 4</string>
    <string name="you_re_all_">You\'re all set!</string>
    <string name="following">Following</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
...
    <string name="placeholder_username_emotion">Julian is feeling happy</string>
    <string name="placeholder_situation">crumbl cookies</string>


    <string name="for_you">For you</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="followers">Followers</string>
    <string name="search_text">Search for users</string>
    <string name="following_text_feed">Moods</string>
    <string name="for_you_text_feed">Users</string>
    <string name="filter_mood_events">Filter Mood Events</string>
    <string name="search_mood_text">Search for words</string>
    <!-- TODO: Remove or change this placeholder text -->
...
